Call Class.getConstructor.newInstance instead of newInstance
(cherry picked from commit 288bfcf861078f30e49a73cb843f6c6697e8db4e)