@@ -121,7 +121,7 @@ public class DatabaseFactory {
 
         Database returnDatabase;
         try {
-            returnDatabase = foundDatabases.iterator().next().getClass().newInstance();
+            returnDatabase = foundDatabases.iterator().next().getClass().getConstructor().newInstance();
         } catch (Exception e) {
             throw new UnexpectedLiquibaseException(e);
         }
@@ -183,7 +183,7 @@ public class DatabaseFactory {
             DatabaseFactory databaseFactory = DatabaseFactory.getInstance();
             if (databaseClass != null) {
                 databaseFactory.clearRegistry();
-                databaseFactory.register((Database) Class.forName(databaseClass, true, resourceAccessor.toClassLoader()).newInstance());
+                databaseFactory.register((Database) Class.forName(databaseClass, true, resourceAccessor.toClassLoader()).getConstructor().newInstance());
             }
 
             try {
@@ -195,7 +195,7 @@ public class DatabaseFactory {
                     throw new RuntimeException("Driver class was not specified and could not be determined from the url (" + url + ")");
                 }
 
-                driverObject = (Driver) Class.forName(driver, true, resourceAccessor.toClassLoader()).newInstance();
+                driverObject = (Driver) Class.forName(driver, true, resourceAccessor.toClassLoader()).getConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException("Cannot find database driver: " + e.getMessage());
             }
@@ -208,7 +208,7 @@ public class DatabaseFactory {
             if (propertyProviderClass == null) {
                 driverProperties = new Properties();
             } else {
-                driverProperties = (Properties) Class.forName(propertyProviderClass, true, resourceAccessor.toClassLoader()).newInstance();
+                driverProperties = (Properties) Class.forName(propertyProviderClass, true, resourceAccessor.toClassLoader()).getConstructor().newInstance();
             }
 
             if (username != null) {
